--- a/styles.css
+++ b/styles.css
@@ -1,16 +1,17 @@
 *{
     margin: 0;
     padding: 0;
+    cursor: default;
 }
 
 body {
-    font-family: 'Arial', sans-serif;
+    font-family: "Tahoma", "Microsoft Sans Serif", sans-serif;
     background-color: #f0f0f0;
     color: #333;
 }
 
 
-
+ 
 /* -----  Desktop  ----- */
 
 
@@ -19,11 +20,14 @@ body {
     position: absolute;
     display: flex;
     flex-direction: column;
-    height: calc(100vh - 10px - 6vh);
-    width: calc(100vw - 10px - 6vh);
+    height: calc(100vh - 6vh);
+    width: calc(100vw - 6vh);
     padding: 3vh;
-    background-color: #b8b8b8;
-    border: 5px solid #888;
+    background-image: url('resources/images/bliss.png');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    /* border: 5px solid #888; */
 }
 
 
@@ -55,6 +59,59 @@ body {
 }
 
 
+/* --- Start Menu --- */
+
+.start-menu {
+    position: absolute;
+    margin: 0.1vh;
+    bottom: 3vh;
+    left: 0;
+    width: 60vh;
+    height: 70vh;
+    background-color: #245DDA;
+    /* border: 2px solid #888; */
+    box-shadow: 0 0 5px rgba(0,0,0,0.1);
+    border-radius: 3%;
+    padding: 3px;
+}
+
+.start-menu-header{
+    height: 10vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    color: white;
+    font-size: 2.5vh;
+    /* border: #333 1px solid; */
+    margin-bottom: 3px;
+}
+
+.start-menu-content{
+    display: flex;
+    flex-direction: row;
+    height: 60vh;
+    overflow-y: auto;
+    /* border: #333 1px solid; */
+    /* background-color: #f0f0f0; */
+}
+
+.start-menu-left{
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    padding: 1.5vh;
+    background-color: #f0f0f0;
+    border-right: 1px solid #888;
+
+}
+.start-menu-right{
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    padding: 1.5vh;
+    background-color: #b8cefd ;
+}
+
 
 /* ----  Application Window  ---- */
 
@@ -71,13 +128,13 @@ body {
     box-shadow: 0 0 5px rgba(0,0,0,0.1);
     display: flex;
     flex-direction: column;
-    /* padding: 1vh; */
-
-    /* display: none;  */
+    resize: both;
+    min-width: 300px;
+    min-height: 200px;
+    overflow: hidden;
 }
 
 .app-window:focus {
-    z-index: 10;
     box-shadow: 0 0 25px rgba(0,0,0,0.2);
 }
 
@@ -116,60 +173,12 @@ body {
     background-color: #f00;
 }
 
-
-
-/* -----  TaskBar  ----- */
-
-
-
-.taskbar{
-    position: fixed;
-    height: 3.75vh;
-    width: 100%;
-    bottom: 0;
-    background-color: #888;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    padding: 0.5vh;
-}
-
-.taskbar-apps{
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    height: 100%;
-    width: 80%;
-    justify-content: center;
-}
-
-.taskbar-apps img{
-    height: 3vh;
-    width: 3vh;
-    margin: 0 1vh;
-    cursor: pointer;
-
-} 
-
-
-.taskbar-apps-open{
-    background-color: #555;
-    border-radius: 25%;
-    padding: 0.5vh;
-    transition: background-color 0.2s;
-}
-
-
-
-.taskbar-time{
+ 
+.restoreBtn {
+    display: block;
+    top:0;
+    left: 0;
     position: absolute;
-    right: 2vw;
-    color: white;
-    font-size: 1.5vh;
-    display: flex;
-    flex-direction: column;
-    align-items: end;
-    justify-content: center;
-    height: 100%;
+    width: 100vw;
+    height: 100vh;
 }
-
